--- a/pyScriptsTables/books.ipynb
+++ b/pyScriptsTables/books.ipynb
@@ -965,12 +965,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_books.to_csv('books.csv')"
+    "# editing bc the genres got messed up:\n",
+    "books = pd.read_csv('/Users/emma/Desktop/database/db_autumn2024/pyScriptsDB/tables/books.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books['genres'] = books['genres'].str.split(',').str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3000, 8)\n",
+      "(2966, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(books.shape)\n",
+    "books.dropna(inplace=True)\n",
+    "print(books.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.unique of 0             Classics\n",
+       "1             Classics\n",
+       "2              History\n",
+       "3              Mystery\n",
+       "4              Fiction\n",
+       "             ...      \n",
+       "2994        Nonfiction\n",
+       "2996           Mystery\n",
+       "2997    Sequential Art\n",
+       "2998           Fiction\n",
+       "2999             Humor\n",
+       "Name: genres, Length: 2966, dtype: object>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books['genres'].unique\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books.to_csv('/Users/emma/Desktop/database/db_autumn2024/pyScriptsDB/tables/books.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -994,106 +1064,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Book Id</th>\n",
+       "      <th>isbn</th>\n",
        "      <th>Title</th>\n",
        "      <th>Author</th>\n",
-       "      <th>isbn</th>\n",
        "      <th>num_pages</th>\n",
        "      <th>publication_date</th>\n",
        "      <th>publisher</th>\n",
        "      <th>genres</th>\n",
+       "      <th>Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>33195</td>\n",
+       "      <td>0764585746</td>\n",
        "      <td>Shakespeare's Romeo and Juliet</td>\n",
        "      <td>William Shakespeare</td>\n",
-       "      <td>0764585746</td>\n",
        "      <td>231</td>\n",
        "      <td>5/8/2000</td>\n",
        "      <td>Hungry Minds</td>\n",
        "      <td>Classics</td>\n",
+       "      <td>30.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5478</td>\n",
+       "      <td>1421808323</td>\n",
        "      <td>Nineteen Eighty-Four</td>\n",
        "      <td>George Orwell</td>\n",
-       "      <td>1421808323</td>\n",
        "      <td>387</td>\n",
        "      <td>7/1/2005</td>\n",
        "      <td>1st World Library</td>\n",
        "      <td>Classics</td>\n",
+       "      <td>35.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>531</td>\n",
+       "      <td>0812969707</td>\n",
        "      <td>A War Like No Other: How the Athenians &amp; Spart...</td>\n",
        "      <td>Victor Davis Hanson</td>\n",
-       "      <td>0812969707</td>\n",
        "      <td>397</td>\n",
        "      <td>9/12/2006</td>\n",
        "      <td>Random House</td>\n",
        "      <td>History</td>\n",
+       "      <td>32.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6838</td>\n",
+       "      <td>0743484185</td>\n",
        "      <td>Easy Prey (Lucas Davenport  #11)</td>\n",
        "      <td>John Sandford</td>\n",
-       "      <td>0743484185</td>\n",
        "      <td>480</td>\n",
        "      <td>6/1/2004</td>\n",
        "      <td>Simon &amp; Schuster</td>\n",
        "      <td>Mystery</td>\n",
+       "      <td>10.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3311</td>\n",
+       "      <td>0571219764</td>\n",
        "      <td>Self</td>\n",
        "      <td>Yann Martel</td>\n",
-       "      <td>0571219764</td>\n",
        "      <td>331</td>\n",
        "      <td>4/7/2003</td>\n",
        "      <td>Faber  Faber</td>\n",
        "      <td>Fiction</td>\n",
+       "      <td>33.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Book Id                                              Title  \\\n",
-       "0    33195                     Shakespeare's Romeo and Juliet   \n",
-       "1     5478                               Nineteen Eighty-Four   \n",
-       "2      531  A War Like No Other: How the Athenians & Spart...   \n",
-       "3     6838                   Easy Prey (Lucas Davenport  #11)   \n",
-       "4     3311                                               Self   \n",
+       "         isbn                                              Title  \\\n",
+       "0  0764585746                     Shakespeare's Romeo and Juliet   \n",
+       "1  1421808323                               Nineteen Eighty-Four   \n",
+       "2  0812969707  A War Like No Other: How the Athenians & Spart...   \n",
+       "3  0743484185                   Easy Prey (Lucas Davenport  #11)   \n",
+       "4  0571219764                                               Self   \n",
        "\n",
-       "                Author        isbn  num_pages publication_date  \\\n",
-       "0  William Shakespeare  0764585746        231         5/8/2000   \n",
-       "1        George Orwell  1421808323        387         7/1/2005   \n",
-       "2  Victor Davis Hanson  0812969707        397        9/12/2006   \n",
-       "3        John Sandford  0743484185        480         6/1/2004   \n",
-       "4          Yann Martel  0571219764        331         4/7/2003   \n",
+       "                Author  num_pages publication_date          publisher  \\\n",
+       "0  William Shakespeare        231         5/8/2000       Hungry Minds   \n",
+       "1        George Orwell        387         7/1/2005  1st World Library   \n",
+       "2  Victor Davis Hanson        397        9/12/2006       Random House   \n",
+       "3        John Sandford        480         6/1/2004   Simon & Schuster   \n",
+       "4          Yann Martel        331         4/7/2003       Faber  Faber   \n",
        "\n",
-       "           publisher    genres  \n",
-       "0       Hungry Minds  Classics  \n",
-       "1  1st World Library  Classics  \n",
-       "2       Random House   History  \n",
-       "3   Simon & Schuster   Mystery  \n",
-       "4       Faber  Faber   Fiction  "
+       "     genres  Price  \n",
+       "0  Classics  30.50  \n",
+       "1  Classics  35.99  \n",
+       "2   History  32.00  \n",
+       "3   Mystery  10.50  \n",
+       "4   Fiction  33.50  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db_books.head()"
+    "books.head()"
    ]
   }
  ],
